added include files to tex

--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -44,13 +44,19 @@ Mathematik-Vorkurs 2011 produziert.}
 \maketitle
 \tableofcontents
 
+\include{Unix}
+\include{RechnerIstDumm}
+\include{HelloWorld}
+\include{Sequenz}
+\include{Variablen}
+\include{Verzweigung}
+\include{Schleifen}
+\include{IdeeZuProgram}
+\include{Funktionen}
+\include{Programmierstil}
+\include{Debugging}
+
 \cleardoublepage
-%\pagestyle{scrplain}
 \ofoot[]{}
 \markboth{Notizen}{Notizen}
-%\mbox{}
-%\cleardoublepage
-%\include{Funktionen}
-%\include{ZusammenfassungKay}
-%\include{merkblatt}
 \end{document}
