--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -44,12 +44,13 @@ Mathematik-Vorkurs 2011 produziert.}
 \maketitle
 \tableofcontents
 
-\include{Unix}
+%\include{Unix}
 \include{RechnerIstDumm}
-\include{HelloWorld}
-\include{Sequenz}
-\include{Variablen}
-\include{Verzweigung}
+%\include{HelloWorld}
+%\include{Sequenz}
+%\include{Variablen}
+:w
+:q
 \include{Schleifen}
 \include{IdeeZuProgram}
 \include{Funktionen}
