--- a/Tex/HelloWorld.tex
+++ b/Tex/HelloWorld.tex
@@ -1,6 +1,6 @@
-# Hello World!
+\section {Hello World!}
 
-## Wozu "Hello World!"?
+\subsection {Wozu "Hello World!"?}
 
 Fast alle Bücher, Tutorials, Vorkurshefte und sonstige Programmierbeispiele beginnen mit einem einfachen Programm, das nichts tut als "Hello World!" auf der Konsole auszugeben.
 
