--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -44,9 +44,9 @@ Mathematik-Vorkurs 2011 produziert.}
 \maketitle
 \tableofcontents
 
-%\include{Unix}
+\include{Unix}
 \include{RechnerIstDumm}
-%\include{HelloWorld}
+\include{HelloWorld}
 %\include{Sequenz}
 %\include{Variablen}
 \include{Schleifen}
