--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -48,7 +48,7 @@ Mathematik-Vorkurs 2011 produziert.}
 \include{RechnerIstDumm}
 \include{HelloWorld}
 %\include{Sequenz}
-%\include{Variablen}
+\include{Variablen}
 \include{Schleifen}
 \include{IdeeZuProgram}
 \include{Funktionen}
