Weiter weiter ins Verderben …

--- a/Tex/HelloWorld.tex
+++ b/Tex/HelloWorld.tex
@@ -10,11 +10,13 @@ Im Grund behandelt man mit dem "Hello World!"-Programm zwei Fragen:
 
 In den meisten Programmiersprachen gibt es eine Art "Rahmen" der die eigentliche Programmlogik umgibt.
 In Java sieht das Hello-World-Programm wie folgt aus: 
-<pre> <code>public class Hello {
-	public static void main(String args[]) {
-		System.out.println("Hello World!");	// gibt 'Hello World' aus.
-	}
-}</pre> </code>
+\begin{verbatim}
+public class Hello {
+  public static void main(String args[]) {
+    System.out.println("Hello World!");	// gibt 'Hello World' aus.
+  }
+}
+\end{verbatim}
 
 Die erste Zeile enthält unter anderem den Namen des Programms nämlich "Hello". Die Datei mit dem Quelltext muss demzufolge "Hello.java" heißen.
 "public static void main(String args[]) {" ist der Anfang der Main-Funktion des Programmes. Hier stehen die Befehle, die nach Programmstart als erstes abgearbeitet werden.
