--- a/Tex/Unix.tex
+++ b/Tex/Unix.tex
@@ -74,17 +74,22 @@ Genau so werden die Parameter und der richtige Aufruf von ls auch in der Manpage
 
 \subsection{Befehle verknüpfen}
 In Unix können auch mehrere Befehle verknüpft werden. Dazu gibt es mehrere nützliche Operatoren.
-* \& - „command \&“ führt das Kommando im Hintergrund aus
-* \&\& - mit „command1 \&\& command2“ kann man mehrere Kommandos hintereinander ausführen z.B. „mkdir foo \&\& ls -l \&\& cd foo/“
-* | - mit „command1 | command2“ kann man die Ausgabe von Kommando1 in Kommando2 verwenden  z.B. „ls -l | grep foo“
+\begin{itemize}
+\item „command \&“ führt das Kommando im Hintergrund aus
+\item Mit „command1 \&\& command2“ kann man mehrere Kommandos hintereinander ausführen z.B. „mkdir foo \&\& ls -l \&\& cd foo/“
+\item Mit „command1 | command2“ kann man die Ausgabe von Kommando1 in Kommando2 verwenden  z.B. „ls -l | grep foo“
+\end{itemize}
 
 Man kann mit diesen Verknüpfungen aber auch sehr viel Schabernack treiben, man sollte davon nicht mehr benutzen als man benötigt, da man so unnötige Fehler vermeiden kann.
-Weitere nützliche Operatoren sind:
-* > - „command > file“ schreibt die Ausgabe der Befehls in die angegebene Datei
-* >> - wie „>“, hängt die Ausgabe hinten an die Datei an
+
+Auch diese Operatoren sind oft nützlich:
+\begin{itemize}
+\item „command $\gg$ file“ schreibt die Ausgabe der Befehls in die angegebene Datei
+\item „command $\gg\gg$ file“ hängt die Ausgabe hinten an die Datei an
+\end{itemize}
 
 \subsection{Vom Textmodus zum Graphikmodus und wieder zurück}
 Wie man zum Beispiel in den Rechnerpools der Fakultät sieht, besitzen moderne Unixoide Betriebssysteme nicht mehr ausschließlich den Textmodus. Man kann auch wie gewohnt in Fenstern bunte Bildchen anschauen.
-Im Gegensatz zu Windows, kann man hier allerdings Programme nicht wirklich von der Shell losgelöst starten – die Ein- und Ausgaben sind nur für den User nicht mehr sichtbar. Besonders deutlich wird wenn man zum Beispiel „firefox“ über ein Terminal startet – ob Webbrowser, Spiel oder Programmierumgebung – jedes Programm hängt an der Shell.
-Die Wichtigkeit der Shell und für viele Entwickler der Grund überhaupt eine Shell zu benutzen heißt Secure Shell. Mit dem Befehl „ssh“ kann man nämlich auch eine Shell auf einem anderen Unix-Rechner öffnen und sich Beispielsweise von Zuhause im Rechnerpool der FIN einloggen und dort arbeiten – sogar mit Programmen die man lokal gar nicht installiert hat. Mit „ssh -x“ kann man sogar Graphikmodus-Programme benutzen.
+Im Gegensatz zu Windows, kann man hier allerdings Programme nicht wirklich von der Shell losgelöst starten, die Ein- und Ausgaben sind nur für den User nicht mehr sichtbar. Besonders deutlich wird wenn man zum Beispiel „firefox“ über ein Terminal startet – ob Webbrowser, Spiel oder Programmierumgebung – jedes Programm hängt an der Shell.
+Mit dem Befehl „ssh“ kann man auch eine Shell auf einem anderen Unix-Rechner öffnen und sich Beispielsweise von Zuhause im Rechnerpool der FIN einloggen und dort arbeiten – sogar mit Programmen die man lokal gar nicht installiert hat. Mit „ssh -x“ kann man auch Graphikmodus-Programme benutzen.
 Im Gegensatz zum Remotedesktop werden hier allerdings wesentlich weniger Daten übertragen und der Computer bleibt (einigermaßen) schnell.
