Mir fallen keine sinnvollen Comitmessages mehr ein :(

--- a/Tex/HelloWorld.tex
+++ b/Tex/HelloWorld.tex
@@ -36,6 +36,7 @@ Damit bleiben allerdings noch einige Stellen des Programmcodes unerklärt: \lsti
 Mehrzeilige Kommentare beginnen mit \lstinline$/*$ und enden mit \lstinline$*/$. Der Übersicht halber führt man oftmal die Reihe mit Sternen von unten bis oben fort.
 
 
+\subsection{Das Programm ausführen}
 Um das Programm auszuführen, müssen wir zuerst den Quelltext des Programms in Bytecode umwandeln lassen und dann die Java-Virtual-Maschine aufrufen, die den Bytecode aufsführt. 
 Für das Übersetzen des Quelltextes in Bytecode ist der Java-Compiler zuständig
 Unter UNIX ruft man den Java-Compiler aus dem Terminal mit „javac Hello.java“ auf. Der Compiler hat nun, sofern das Programm keine Fehler enthält eine Datei mit dem Namen „Hello.class“ erzeugt (oder eine ältere Version überschrieben) – diese Datei enthält den Bytecode.
