--- a/Tex/Variablen.tex
+++ b/Tex/Variablen.tex
@@ -1,10 +1,10 @@
 \chapter{Variablen und Datentypen}
 Computerprogramme weisen im Wesentlichen drei relativ unabhängige Komponenten auf: Eingabe, Verarbeitung und Ausgabe. Bis jetzt haben wir uns nur mit der Ausgabe beschäftigt.
-Die einfachste Form der Eingabe kennen wir auch schon: Wir setzen Werte im Quelltext. Ein Beispiel dafür ist unser "Hello World"-Proramm, indem wir festlegen das genau "Hello World" und nicht "foobar" ausgeben werden soll.
+Die einfachste Form der Eingabe kennen wir auch schon: Wir setzen Werte im Quelltext. Ein Beispiel dafür ist unser „Hello World“-Proramm, indem wir festlegen das genau „Hello World“ und nicht „foobar“ ausgeben werden soll.
 Um komplexere Eingaben, Verarbeitung und die Ausgabe dieser veränderlichen Daten zu ermöglichen brauchen wir eine Möglichkeit Daten abzuspeichern und zu bearbeiten, die vor dem Programmaufruf noch nicht bekannt sind.
 Genau dies erlaubt das Konzept der Variablen. Eine Variable ist ein Platzhalter für einen dieser unbekannten Werte. \\
 
-Ersetzen wir im "Hello World"-Programm die Zeile
+Ersetzen wir im „Hello World“-Programm die Zeile
 \begin{lstlisting}
 System.out.println("Hello World");
 \end{lstlisting}
@@ -58,33 +58,48 @@ Definition und Deklaration können auch in einer Anweisung gemacht werden:
 String text = "Hello World";
 \end{lstlisting}
 Beachtet, das der Datentyp von Rechter und Linker Seite der Zuweisung übereinstimmen müssen. Es kann allerdings auch sein, dass ihr das gar nicht wollt.
-Um den Typ einer Variablen zu ändern gibt es sogenannte Casts. Integrale Datentypen wie "int" oder "char" könnt ihr ineinander umwandeln, indem ihr den eingeklammerten Namen des Zieldatentyps vor die Variable schreibt: "char c = (char) intvariable;". Das "(char)" sorgt dann dafür, dass aus der Ganzzahl ein Buchstabe gemacht wird.
+Um den Typ einer Variablen zu ändern gibt es sogenannte Casts. Integrale Datentypen wie int oder char könnt ihr ineinander umwandeln, indem ihr den eingeklammerten Namen des Zieldatentyps vor die Variable schreibt: 
+\begin{lstlisting}
+char c = (char) intvariable;
+\end{lstlisting}
+Das \lstinline$(char)$ sorgt dann dafür, dass aus der Ganzzahl ein Buchstabe gemacht wird.
 Für andere Typänderungen gibt es Funktionen.
 
-\subsection {Funktionsaufrufe}
-Funktionen sind vorgefertigte Unterprogramme, die einen bestimmten Zweck erfüllen. Eine Funktion kennt ihr schon: "System.out.println()".
+\subsection{Funktionsaufrufe}
+Funktionen sind vorgefertigte Unterprogramme, die einen bestimmten Zweck erfüllen. Eine Funktion kennt ihr schon: \lstinline$System.out.println()$.
 Diese Funktion tut etwas, und gibt dann die Kontrolle wieder an den nächsten Befehl ab. Es gibt aber auch Funktionen, die einen Wert berechnen.
-Diesen Wert nennt man Rückgabewert. Die Funktion "Math.random()" hat als Rückgabewert einen zufälligen Wert.
-Wie packt man nun Funktionen in einen Befehl? Interessiert uns der Rückgabewert der Funktion, so benutzen wir die Funktion in einer Zuweisung: "rueckgabewert = funktionxy();"
-Interessiert uns der Rückgabewert nicht, so lassen wir die linke Seite der Zuweisung einfach weg: "funktionxy();".
-Viele Funktionen, beispielsweise "System.out.println()", sind in der Lage Daten weiterzuverarbeiten. Dafür muss der Funktion allerdings mitgeteilt werden, welche Daten gemeint sind.
+Diesen Wert nennt man Rückgabewert. Die Funktion \lstinline$Math.random()$ hat als Rückgabewert einen zufälligen Wert.
+Wie packt man nun Funktionen in einen Befehl? Interessiert uns der Rückgabewert der Funktion, so benutzen wir die Funktion in einer Zuweisung: 
+\begin{lstlisting}
+zufallszahl = Math.random();
+\end{lstlisting}
+Interessiert uns der Rückgabewert nicht, so lassen wir die linke Seite der Zuweisung einfach weg:
+\begin{lstlisting}
+Math.random();
+\end{lstlisting}
+Viele Funktionen, beispielsweise \lstinline$System.out.println()$, sind in der Lage Daten weiterzuverarbeiten. Dafür muss der Funktion allerdings mitgeteilt werden, welche Daten gemeint sind.
 Um diese Daten an die Funktion zu übergeben gibt es die Klammern nach dem Funktionsnamen. Dort kann man die entsprechenden Werte eintragen.
 Sollen der Funktion mehrere Werte übergeben werden, so müssen diese durch Kommata getrennt werden – die Reihenfolge der Parameter entscheidet dabei darüber, welcher Wert wofür benutzt wird.
+\begin{lstlisting}
+funktion(parameter1, parameter2 /* . . . */);
+\end{lstlisting}
 
 \section {Einlesen von Werten}
-Um Werte einzulesen braucht man einen Variable vom Typ "Scanner". Mit dem Scanner kann man nicht nur von der Standarteingabe, sondern auch aus Dateien, Netzwerkverbindungen und anderen Quellen Daten einlesen. 
-Deswegen muss man Angeben, dass der Scanner die Daten aus "System.in" beziehen soll.
-Danach kann man mit scannervariable.next() die nächste Eingabe abholen. Im Quelltext könnte das zum Beispiel so aussehen:
-<pre><code>import java.io.*;
+Um Werte einzulesen braucht man einen Variable vom Typ \lstinline$Scanner$. Mit dem Scanner kann man nicht nur von der Standarteingabe, sondern auch aus Dateien, Netzwerkverbindungen und anderen Quellen Daten einlesen. 
+Deswegen muss man Angeben, dass der Scanner die Daten aus \lstinline$System.in$ beziehen soll.
+Danach kann man mit \lstinline$scannervariable.next()$ die nächste Eingabe abholen. Im Quelltext könnte das zum Beispiel so aussehen:
+\begin{lstlisting}
+import java.io.*;
 import java.util.Scanner;
 
 public class Hello {
 	public static void main(String args[]) {
 		Scanner scanner;	// Beachtet den unterschied zwischen Datentyp('S') und Variable('s')!
-		scanner = new Scanner(System.in); // Legt einen Scanner an, der System.in überwacht
+		scanner = new Scanner(System.in); // Legt einen Scanner an, der System.in ueberwacht
 		String name = scanner.next();
 		System.out.println("Hello " + name + "!");
 	}
-}</pre></code>
-Damit ist unser "Hello World"-Programm, schon richtig gut, denn es kann nun auf Nutzereingaben reagieren.
+}
+\end{lstlisting}
+Damit ist unser „Hello World“-Programm, schon richtig gut, denn es kann nun auf Nutzereingaben reagieren.
 
