aufgaben ohne ende …

--- a/Tex/HelloWorld.tex
+++ b/Tex/HelloWorld.tex
@@ -47,3 +47,18 @@ Um das Programm auszuführen, müssen wir zuerst den Quelltext des Programms in 
 Für das Übersetzen des Quelltextes in Bytecode ist der Java-Compiler zuständig
 Unter UNIX ruft man den Java-Compiler aus dem Terminal mit „javac Hello.java“ auf. Der Compiler hat nun, sofern das Programm keine Fehler enthält eine Datei mit dem Namen „Hello.class“ erzeugt (oder eine ältere Version überschrieben) – diese Datei enthält den Bytecode.
 Die JVM kann man mit dem Befehl „java“ aufrufen. „java Hello“ führt den Bytecode in Hello.class aus.
+
+\section {Aufgaben}
+\begin{itemize}
+\item Sieh dir den Quelltext in Hello.java an
+\item Kompiliere das Programm und führe es aus
+\item Ändere den ausgegebenen Text
+\item Ändere den Namen des Programms
+\end{itemize}
+
+Normalerweise bearbeitet man Quelltext nicht in einem einfachen Texteditor sondern einer weit praktischeren Entwicklungsumgebung.
+Für Java bietet sich als Entwicklungsumgebung das Programm „eclipse“ an.
+\begin{itemize}
+\item Starte Eclipse und erstelle ein neues Projekt für das Hello-World-Programm.
+\item Füge eine Quelltextdatei mit dem Hello-World-Programm zum Projekt hinzu und führe es aus.
+\end{itemize}
