--- a/Tex/Unix.tex
+++ b/Tex/Unix.tex
@@ -93,3 +93,17 @@ Wie man zum Beispiel in den Rechnerpools der Fakultät sieht, besitzen moderne U
 Im Gegensatz zu Windows, kann man hier allerdings Programme nicht wirklich von der Shell losgelöst starten, die Ein- und Ausgaben sind nur für den User nicht mehr sichtbar. Besonders deutlich wird wenn man zum Beispiel „firefox“ über ein Terminal startet – ob Webbrowser, Spiel oder Programmierumgebung – jedes Programm hängt an der Shell.
 Mit dem Befehl „ssh“ kann man auch eine Shell auf einem anderen Unix-Rechner öffnen und sich Beispielsweise von Zuhause im Rechnerpool der FIN einloggen und dort arbeiten – sogar mit Programmen die man lokal gar nicht installiert hat. Mit „ssh -x“ kann man auch Graphikmodus-Programme benutzen.
 Im Gegensatz zum Remotedesktop werden hier allerdings wesentlich weniger Daten übertragen und der Computer bleibt (einigermaßen) schnell.
+
+\section {Aufgaben}
+
+\begin{itemize}
+\item lade dir mit 'wget ...' das Dateiarchiv für die erste Aufgabe herunter, entpacke es mit 'tar -xf'.
+\item sieh nach wie spät es ist mit 'date' und rufe mit 'man date' die Manpage zu 'date' an
+\item lege in Europa einen Ordner 'Großbritanien' an und verschiebe 'york' hinein
+\item finde Atlantis und lösche es
+\item lege einen weiteren Ordner mit Städten für Australien an, lösche den Ordner wieder
+\item trage die Einwohnerzahl von Magdeburg in der Datei europa/deutschland/magdeburg ein
+\item gib den Inhalt der Datei europa/deutschland/magdeburg mit cat aus
+\item schau dir die Dateien in deinem Homeverzeichnis an
+\item öffne eine ssh-Verbindung zu einem anderen Rechner
+\end{itemize}
