--- a/Tex/Variablen.tex
+++ b/Tex/Variablen.tex
@@ -103,3 +103,12 @@ public class Hello {
 \end{lstlisting}
 Damit ist unser „Hello World“-Programm, schon richtig gut, denn es kann nun auf Nutzereingaben reagieren.
 
+\section {Aufgaben}
+\begin{itemize}
+\item Sieh der das neue Programm "Hello.java" an.
+\item Füge eine neue Textausgabe ein, die den Nutzer auffordert seinen Namen einzugeben, sonst weiß er nicht, dass er etwas eingeben soll.
+\item Schreibe ein Java Programm, dass den Ape-Faktor einer Person ausgibt, nachdem man Größe und Armspanne eingegeben hat. (Der Ape-Faktor ist die Differenz zwischen Größe und Armspanne einer Person)
+\item Schreibe ein Programm, dass den ASCII-Code eines eingegeben Buchstaben ausgibt.
+\end{itemize}
+
+Zusatz: Schreibe ein Programm, dass einen Buchstaben mit der Caesar-Verschlüsselung (mit Variabler Verschiebeweite) verschlüsseln kann.
