--- a/Tex/Variablen.tex
+++ b/Tex/Variablen.tex
@@ -87,10 +87,12 @@ funktion(parameter1, parameter2 /* . . . */);
 \section {Einlesen von Werten}
 Um Werte einzulesen braucht man einen Variable vom Typ \lstinline$Scanner$. Mit dem Scanner kann man nicht nur von der Standarteingabe, sondern auch aus Dateien, Netzwerkverbindungen und anderen Quellen Daten einlesen. 
 Deswegen muss man Angeben, dass der Scanner die Daten aus \lstinline$System.in$ beziehen soll.
-Danach kann man mit \lstinline$scannervariable.next()$ die nächste Eingabe abholen. Im Quelltext könnte das zum Beispiel so aussehen:
+Danach kann man mit \lstinline$scannervariable.next()$ die nächste Eingabe abholen.
+Außerdem muss man um den Scanner benutzen zu können mit \lstinline$import java.util.Scanner;$ ein weiteres Paket einbinden in dem Scanner enthalten ist.
+Im Quelltext sieht das so aus:
 \begin{lstlisting}
-import java.io.*;
-import java.util.Scanner;
+import java.io.*; // Pakete fuer ein und Ausgaben
+import java.util.Scanner; // Paket fuer den Scanner
 
 public class Hello {
 	public static void main(String args[]) {
@@ -105,7 +107,6 @@ Damit ist unser „Hello World“-Programm, schon richtig gut, denn es kann nun 
 
 \section {Aufgaben}
 \begin{itemize}
-\item Sieh der das neue Programm "Hello.java" an.
 \item Füge eine neue Textausgabe ein, die den Nutzer auffordert seinen Namen einzugeben, sonst weiß er nicht, dass er etwas eingeben soll.
 \item Schreibe ein Java Programm, dass den Ape-Faktor einer Person ausgibt, nachdem man Größe und Armspanne eingegeben hat. (Der Ape-Faktor ist die Differenz zwischen Größe und Armspanne einer Person)
 \item Schreibe ein Programm, dass den ASCII-Code eines eingegeben Buchstaben ausgibt.
